 - [DEV-262] added group filtering  for "Trigger info" (Artem)
 - [DEV-259] added internal links (Artem)
 - [DEV-251] added improved screen editing (Artem)
 - [DEV-249] added support of advanced regular expressions (Artem,Sasha)
 - [DEV-247] added enhancement to the Graph function (Artem)
 - [DEV-233,DEV-237] added support of scheduled maintenance periods (Artem,Sasha)

Changes for 1.6.2

 - [ZBX-611] fixed undefined variables in installation wizard (Artem)
 - [ZBX-612] fixed possible incorrect value for host (Artem)
 - [ZBX-627] fixed items update (Artem)
 - [ZBX-625] fixed possible incorrect processing of delta for integers if using dbcache (Sasha)
 - [DEV-273] added mass update for IPMI fields (Sasha)
 - [DEV-272] added support of {HOSTNAME}, {HOST.CONN}... macros for "IPMI IP address" (Sasha)
 - [ZBX-623] fixed incorrect processing of function abschange() for integers(Sasha)
 - [ZBX-622] fixed broked autocreation of SQLite database (Alexei)
 - [ZBX-621] fixed bad performance of the graph related screen due to missing index (Alexei)
 - [ZBX-620] fixed jstree error in IT Services (Artem)
 - [ZBX-619] fixed agent crash for system.uptime under Solaris 2.5.1 (Sasha)
 - [ZBX-618] fixed cast problem with oracle9 (Artem)
 - [ZBX-613] fixed possible incorrect evaluating of trigger functions if using dbcache (Sasha)
 - [ZBX-610] fixed memory leak in external checks (Sasha)
 - [DEV-254] improved server side logging (Sasha)
 - [ZBX-602] fixed possible incorrect trigger evaluation if value sotred as "delta" (Sasha)
 - [DEV-268] added support of net.if.in/out/total under AIX (Sasha)
 - [DEV-268] added support of system.cpu.num/util/load/intr/switches, system.uptime under AIX (Sasha)
 - [ZBX-595] improved performance of export screen (Artem)
 - [DEV-269] added permission check when sending notifications (Sasha)
 - [DEV-270] improved trigger configuration view; error string moved to description column (Sasha)