@@ -18,6 +18,7 @@ Changes for 1.7.0
 
 Changes for 1.6.2
 
+ - [DEV-274] added overflow check for uint64 for incoming values (Sasha)
  - [ZBX-611] fixed undefined variables in installation wizard (Artem)
  - [ZBX-612] fixed possible incorrect value for host (Artem)
  - [ZBX-627] fixed items update (Artem)
